fix massive validation to return bool, fix movie model to validate right

--- a/Source/Web/Views/Movies/Edit.cshtml
+++ b/Source/Web/Views/Movies/Edit.cshtml
@@ -12,7 +12,7 @@
         @Html.AntiForgeryToken()
         @Html.ValidationSummary(true) 
         @Form.HiddenID(Model.ID) 
-        @Form.TextBoxRequired(name: "Title", value: Model.Title) 
+        @Form.TextBox(name: "Title", value: Model.Title) 
         @Form.TextBox(name: "Genre", value: Model.Genre) 
         @Form.TextBoxNumber(name: "Price", value: Model.Price) 
         @Form.TextBox(name: "Rating", value: Model.Rating) 
