--- a/Source/Web/Views/Movies/Create.cshtml
+++ b/Source/Web/Views/Movies/Create.cshtml
@@ -9,19 +9,17 @@
 @Assets.Script("jquery.validate.unobtrusive.min.js")   
 
 
-
 <div class="vidform">
-    @using (Html.BeginForm())
-    { 
+    @using (Html.BeginForm()) {
         @Html.AntiForgeryToken()
-        @Form.TextBoxRequired(name: "Title", value: Model.Title) 
+        @Html.ValidationSummary(true)  
+        @Form.TextBox(name: "Title", value: Model.Title) 
         @Form.TextBox(name: "Genre", value: Model.Genre) 
-        @Form.TextBoxNumber(name: "Price", value: Model.Price) 
+        @Form.TextBox(name: "Price", value: Model.Price) 
         @Form.TextBox(name: "Rating", value: Model.Rating) 
         @Form.Submit()
     }
 </div>
- 
   
 <div>
     @Html.ActionLink("Back to List", "Index")
