--- a/Source/Web/Views/Movies/Create.cshtml
+++ b/Source/Web/Views/Movies/Create.cshtml
@@ -13,7 +13,7 @@
     @using (Html.BeginForm()) {
         @Html.AntiForgeryToken()
         @Html.ValidationSummary(true)  
-        @Form.TextBox(name: "Title", value: Model.Title) 
+        @Form.TextBoxRequired(name: "Title", value: Model.Title) 
         @Form.TextBox(name: "Genre", value: Model.Genre) 
         @Form.TextBox(name: "Price", value: Model.Price) 
         @Form.TextBox(name: "Rating", value: Model.Rating) 
