added flashhelpers (need a refactor)

--- a/Source/Web/Views/Shared/_Layout.cshtml
+++ b/Source/Web/Views/Shared/_Layout.cshtml
@@ -18,14 +18,18 @@
             </div>
             <nav>
                 <ul id="menu">
-                    <li>@Html.ActionLink("Home", "Index", "Movies")</li>
+                    <li>@Html.ActionLink("Movie", "Index", "Movies")</li>
                     <li>@Html.ActionLink("User", "Index", "Users")</li>
-                    <li>@Html.ActionLink("Search", "SearchIndex", "Movies")</li>
-                     <li>@Html.ActionLink("Hello World", "Index", "HelloWorld")</li>
+                    <li>@Html.ActionLink("Search", "SearchIndex", "Movies")</li> 
+                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
                 </ul>
             </nav>
         </header>
         <section id="main">
+            @Html.Raw(@Html.Flash())
+            
+            <div id="flash" style="display: none">
+            </div>
             @RenderBody()
         </section>
         <footer>
