--- a/Source/Web/Views/Home/Index.cshtml
+++ b/Source/Web/Views/Home/Index.cshtml
@@ -6,3 +6,11 @@
 <p>
     To learn more about ASP.NET MVC visit <a href="http://asp.net/mvc" title="ASP.NET MVC Website">http://asp.net/mvc</a>.
 </p>
+<p>
+    
+    @Html.ActionLink("PaymentInfo","PaymentInfo", "Home")  
+</p>
+<p>
+    
+    @Html.ActionLink("PersonalInfo", "PersonalInfo", "Home")  
+</p>
