--- a/Source/Web/Views/Shared/_Layout.cshtml
+++ b/Source/Web/Views/Shared/_Layout.cshtml
@@ -19,7 +19,7 @@
             <nav>
                 <ul id="menu">
                     <li>@Html.ActionLink("Movie", "Index", "Movies")</li>
-                    <li>@Html.ActionLink("User", "Index", "Users")</li>
+                    <li>@Html.ActionLink("User", "Index", "Users",   new { area="Admin"}, new {} )</li>
                     <li>@Html.ActionLink("Search", "SearchIndex", "Movies")</li> 
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                 </ul>
