--- a/Source/Web/App_Code/Form.cshtml
+++ b/Source/Web/App_Code/Form.cshtml
@@ -14,6 +14,14 @@
     </p>
 }
 
+@helper TextBoxPassword(string name, object value = null) {
+    var val = "";
+    <p>
+        <label>@name</label>
+        <input type="password" name="@name" id="@name" />
+    </p>
+}
+
 @helper Label(string name, object value = null) {
     var val = value ?? "";
     <p>
