--- a/Source/Web/Views/Shared/_Layout.cshtml
+++ b/Source/Web/Views/Shared/_Layout.cshtml
@@ -21,6 +21,7 @@
                     <li>@Html.ActionLink("Movie", "Index", "Movies", new { area = "" }, new { })</li>
                     <li>@Html.ActionLink("User", "Index", "Users",   new { area="Admin"}, new {} )</li>
                     <li>@Html.ActionLink("Config", "Index", "Configs",   new { area="Admin"}, new {} )</li>
+                    <li>@Html.ActionLink("Log", "Index", "Logs", new { area = "Admin" }, new { })</li>
                     <li>@Html.ActionLink("Home", "Index", "Home", new { area = "" }, new { })</li>
                     <li class="none">@Html.ActionLink("Search", "SearchIndex", "Movies", new { area = "" }, new { }  )</li> 
                 </ul>
