--- a/Source/Web/Views/Home/Index.cshtml
+++ b/Source/Web/Views/Home/Index.cshtml
@@ -22,6 +22,11 @@
 
 </p>
 
+<p>
+    <a href="glimpse.axd">glimpse</a>
+
+</p>
+
 <p> 
 <div class="vidform">
     @using (Html.BeginForm("LogInfo", "Home"))
