--- a/Source/Web/Views/Shared/_Layout.cshtml
+++ b/Source/Web/Views/Shared/_Layout.cshtml
@@ -13,8 +13,8 @@
             <div id="title">
               <h1>MVC Movie App</h1>
             </div>
-            <div id="logindisplay">
-              [ <a href="/Account/LogOn">Log On</a> ] @*This is just a non-working stub*@
+            <div id="logindisplay"> 
+                @Html.Partial("_LogOnPartial") 
             </div>
             <nav>
                 <ul id="menu">
