--- a/Source/Web/Views/Account/Register.cshtml
+++ b/Source/Web/Views/Account/Register.cshtml
@@ -9,53 +9,47 @@
     Use the form below to create a new account. 
 </p>
 <p>
-    Passwords are required to be a minimum of 6 characters in length.
+    Passwords are required to be a minimum of @Membership.MinRequiredPasswordLength characters in length.
 </p>
 
 <script src="@Url.Content("~/Scripts/jquery.validate.min.js")" type="text/javascript"></script>
 <script src="@Url.Content("~/Scripts/jquery.validate.unobtrusive.min.js")" type="text/javascript"></script>
-
-
-
 
 @using (Html.BeginForm()) {
     @Html.ValidationSummary(true, "Account creation was unsuccessful. Please correct the errors and try again.")
     <div>
         <fieldset>
             <legend>Account Information</legend>
-            
-            
+
             <div class="editor-label">
-                UserName
+                @Html.LabelFor(m => m.UserName)
             </div>
             <div class="editor-field">
-                @Html.TextBox("UserName")
+                @Html.TextBoxFor(m => m.UserName)
                 @Html.ValidationMessageFor(m => m.UserName)
-
             </div>
 
             <div class="editor-label">
-                Email
+                @Html.LabelFor(m => m.Email)
             </div>
             <div class="editor-field">
-                @Html.TextBox("Email")
+                @Html.TextBoxFor(m => m.Email)
                 @Html.ValidationMessageFor(m => m.Email)
-
             </div>
 
             <div class="editor-label">
-                Password
+                @Html.LabelFor(m => m.Password)
             </div>
             <div class="editor-field">
-                @Html.Password("Password")
+                @Html.PasswordFor(m => m.Password)
                 @Html.ValidationMessageFor(m => m.Password)
             </div>
 
             <div class="editor-label">
-                Confirm
+                @Html.LabelFor(m => m.ConfirmPassword)
             </div>
             <div class="editor-field">
-                @Html.Password("ConfirmPassword")
+                @Html.PasswordFor(m => m.ConfirmPassword)
                 @Html.ValidationMessageFor(m => m.ConfirmPassword)
             </div>
 
