--- a/Source/Web/Views/Account/LogOn.cshtml
+++ b/Source/Web/Views/Account/LogOn.cshtml
@@ -9,8 +9,10 @@
     Please enter your user name and password. @Html.ActionLink("Register", "Register") if you don't have an account.
 </p>
 
-<script src="@Url.Content("~/Scripts/jquery.validate.min.js")" type="text/javascript"></script>
-<script src="@Url.Content("~/Scripts/jquery.validate.unobtrusive.min.js")" type="text/javascript"></script>
+
+@Assets.Script("jquery.validate.min.js")  
+@Assets.Script("jquery.validate.unobtrusive.min.js")  
+
 
 @Html.ValidationSummary(true, "Login was unsuccessful. Please correct the errors and try again.")
 
