--- a/Source/Web/Views/Home/PaymentInfo.cshtml
+++ b/Source/Web/Views/Home/PaymentInfo.cshtml
@@ -5,36 +5,18 @@
 
 <h2>PaymentInfo</h2>
 
-@using (Html.BeginForm()) {
-    @Html.AntiForgeryToken()
-    @Html.ValidationSummary(true, "  Please correct the errors and try again.")
-    <div>
-        <fieldset> 
-            <legend>payment Information</legend>
-            
-            @* @  Form.TextBox(name: "Number", value: Model.Number) *@
-            
-            
-            <div class="editor-label">
-                @Html.LabelFor(m => m.Number)
-            </div>
-            <div class="editor-field">
-                @Html.TextBoxFor(m => m.Number) 
-                @Html.ValidationMessageFor(m => m.Number)
-            </div>
-              
+@Assets.Script("jquery.validate.min.js")  
+@Assets.Script("jquery.validate.unobtrusive.min.js")   
 
-            <div class="editor-label">
-                @Html.LabelFor(m => m.ExpirationDate)
-            </div>
-            <div class="editor-field">
-                @Html.TextBoxFor(m => m.ExpirationDate) 
-                @Html.ValidationMessageFor(m => m.ExpirationDate)
-            </div>
-             
-            <p>
-                <input type="submit" value="Submit" />
-            </p>
-        </fieldset>
-    </div>
-}
+<div class="vidform">
+    @using (Html.BeginForm()) {
+        @Html.AntiForgeryToken()
+        @Html.ValidationSummary(true)  
+         
+            
+        @Form.TextBoxRequired(name: "Card Number", value: Model.Number, maxLength: 16) 
+        @Form.TextBox(name: "Exp Date", value: "05/2012")  
+        @Form.Submit()
+    }
+</div>
+ 
