--- a/Source/Web/Views/Home/PersonalInfo.cshtml
+++ b/Source/Web/Views/Home/PersonalInfo.cshtml
@@ -19,7 +19,7 @@
         
         
         @Form.TextBoxRequired(name: "Email", value: Model.Email ) 
-        @Form.TextBox(name: "Name", value: Model.Name)   
+        @Form.TextBoxRequired(name: "Name", value: Model.Name)   
         
         @Form.Submit()
     }
