--- a/Source/Web/Views/Account/LogOn.cshtml
+++ b/Source/Web/Views/Account/LogOn.cshtml
@@ -6,7 +6,7 @@
 
 <h2>Log On</h2>
 <p>
-    Please enter your user name and password. @Html.ActionLink("Register", "Register") if you don't have an account.
+    Please enter your user name and password. @Html.ActionLink("Register", "Register") if you don't have an account. We can send you an email if you @Html.ActionLink("Forgot your password", "Forgot")
 </p>
 
 
