--- a/Source/Web/App_Code/Form.cshtml
+++ b/Source/Web/App_Code/Form.cshtml
@@ -10,7 +10,8 @@
     var val = value ?? "";
     <p>
         <label>@name</label>
-        <input type="text" name="@name" id="@name" value="@val" /> 
+        <input type="text" name="@name" id="@name" value="@val"  data-val="true" /> 
+        @ValidationMessage(name)
     </p> 
 }
 
