--- a/Source/Web/Views/Shared/_Layout.cshtml
+++ b/Source/Web/Views/Shared/_Layout.cshtml
@@ -6,6 +6,17 @@
     @Assets.CSS("site.css")
     @Assets.jQuery() 
     @Assets.Script("modernizr-1.7.min.js")  
+
+
+
+    
+    <link href="@Url.Content("~/Content/kendo/kendo.common.min.css")" rel="stylesheet" type="text/css" />
+    <link href="@Url.Content("~/Content/kendo/kendo.default.min.css")" rel="stylesheet" type="text/css" />
+     
+    <script src="@Url.Content("~/Scripts/kendo/kendo.all.min.js")" type="text/javascript"></script>
+
+
+
 </head>
 <body>
     <div class="page">
