added for jeremy

--- a/Source/Web/Views/Home/Index.cshtml
+++ b/Source/Web/Views/Home/Index.cshtml
@@ -7,6 +7,9 @@
     To learn more about ASP.NET MVC visit <a href="http://asp.net/mvc" title="ASP.NET MVC Website">http://asp.net/mvc</a>.
 </p>
 <p>
+Hello Jeremy
+</p>
+<p>
     
     @Html.ActionLink("PaymentInfo","PaymentInfo", "Home")  
 </p>
