--- a/Source/Web/CodeTemplates/AddController/Controller.tt
+++ b/Source/Web/CodeTemplates/AddController/Controller.tt
@@ -28,13 +28,11 @@ namespace <#= nameSpace #>{
 		
 
 
-        [HttpPost]
-        public virtual ViewResult Index( FormCollection form)
+        public override ViewResult Index()
         {
-            TempData["query"] = form["Search"]; 
-            var model = GetModel(null, (string)TempData["query"]);
-            return View(model.Items);
+            return View();
         } 
+
         [AuthorizeByRole(Roles = "Dev")]
         public override ActionResult Edit(int id)
         {
@@ -57,12 +55,14 @@ namespace <#= nameSpace #>{
         {
             var fromdb = ((<#= tableName #>)_table).All();
             var dto = fromdb.Select(x => new <#= tableName #>Dto 
-            { 
+            {  
                 Id = x.Id,
-				UpdatedAt = x.UpdatedAt, 
-                IpAddress = x.IpAddress
-				/*, Level = x.Level, Server = x.Server, 
-                Session=x.Session, UserName= x.UserName, 
+				UpdatedAt = x.UpdatedAt,
+                IpAddress = x.IpAddress,
+                Session = x.Session,
+                /*FirstName = x.FirstName,
+                LastName = x.LastName,
+                Email = x.Email, Level = x.Level, Server = x.Server, UserName= x.UserName, 
                 Summary = x.Summary,  
                 Email = x.Email*/ 
             }).OrderByDescending(x => x.UpdatedAt);
