--- a/Source/Web/Areas/Admin/Views/Customer/Index.cshtml
+++ b/Source/Web/Areas/Admin/Views/Customer/Index.cshtml
@@ -78,7 +78,7 @@
  
                         Session: { type: 'string' }, 
  
-                        UpdatedAt: { type: 'date' }, 
+                        UpdatedAt: { type: 'date' }  
  
                     }
                 }
@@ -110,7 +110,7 @@
  
                 { field: 'Session', title: 'Session'            },
  
-                { field: 'UpdatedAt', title: 'UpdatedAt'   , template: '<div class=\'date nowrap\'> #= kendo.toString(toDate(UpdatedAt), \'MM/dd/yyyy HH:mm\')# </div>' },
+                { field: 'UpdatedAt', title: 'UpdatedAt'   , template: '<div class=\'date nowrap\'> #= kendo.toString(toDate(UpdatedAt), \'MM/dd/yyyy HH:mm\')# </div>' } 
  
             ],
             filterable: true,
